Fixed: align right on number input

--- a/src/components/EditableTd/styles.css
+++ b/src/components/EditableTd/styles.css
@@ -29,6 +29,7 @@
 .NLT__td-cell-container {
 	overflow: hidden;
 	user-select: none;
+	width: 100%;
 }
 
 .NLT__td-cell-padding {
